fixed a bug displaying the wrong font on the logo

--- a/src/sass/_logo.scss
+++ b/src/sass/_logo.scss
@@ -38,18 +38,22 @@
     font-family: $fontLogo;
     font-weight: 400;
     font-style: normal;
-    letter-spacing: 0.1rem;
-    font-size: 1.1rem;
+    letter-spacing: 0.11rem;
+    font-size: 1rem;
+    text-align:  center;
     color: $blackColor;
-    text-align: center;
     position: absolute;
     z-index: 999;
-    top: 36px;
-    left: 50%;
+    top: 33px;
+    left: 49%;
     transform: translate(-50%);
 
     &__dot {
-        padding: 0 0.6rem;
+        position: relative;
+        top: -5px;
+        margin-left: 0.5rem;
+        margin-right: 0.9rem;
+        // border: 1px solid red;
         transition: all 0.5s ease-in-out;
     }
 }
@@ -67,7 +71,8 @@
     }
 
     .logo__text__dot {
-        padding: 0;
+        margin: 0;
+        top: 0;
         transition: all 0.5s ease-in-out;
     }
 }
@@ -94,8 +99,14 @@
     }
 
     .logo__text {
-        font-size: 1.8rem;
-        top: 35px;
+        font-size: 1.5rem;
+        top: 32px;
+        left: 51%;
+
+        &__dot {
+            font-size: 1.4rem;
+            top: -7px;  
+        }
     }
 
 
@@ -111,6 +122,10 @@
     }
 
     .logo__text {
-        left: 166px;
+        left: 170px;
+
+        &__dot {
+            font-size: 1.5rem;
+        }
     }
 }
